# offline-scrobbler

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build.yml  release.yml
src/: auth.rs  lastfmapi.rs  lib.rs  main.rs  scrobbler.rs  utils.rs
src/data/: resp.album.json  resp.scrobble.json
