[package]
name = "offline-scrobbler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
atty = "0.2.14"
directories = "5.0.1"
env_logger = { version = "0.10.0", features = ["color"] }
humantime = "2.1.0"
log = "0.4.19"
md5 = "0.7.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
structopt = { version = "0.3.26", features = ["color"] }
thiserror = "1.0.43"
time = { version = "0.3.23", features = ["macros", "formatting", "local-offset"] }
toml = "0.7.6"
urlencoding = "2.1.2"
xmltree = "0.10.3"

[dev-dependencies]
httpmock = { version = "0.6.8", features = ["env_logger"], default-features = false }
test-log = "0.2.12"
